--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/router": "~8.2.8",
     "@types/jquery": "^3.3.32",
     "jquery": "^3.4.1",
+    "net": "^1.0.2",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.4.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
