--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
     "@types/jquery": "^3.3.32",
+    "chart.js": "^2.7.3",
     "jquery": "^3.4.1",
     "net": "^1.0.2",
+    "ng2-charts": "^2.3.0",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.4.0",
     "sockjs-client": "^1.4.0",
